<resources>
    <string name="app_name">Brain Trainer</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="dialog_message">Do you want to save the game?</string>
    <string name="dialog_title">Save Game</string>
    <string name="new_game_button">New Game</string>
    <string name="continue_button">Continue</string>
    <string name="about_button">About</string>
    <string name="exit_button">Exit</string>
    <string name="novicebutton">Novice</string>
    <string name="easybutton">Easy</string>
    <string name="mediumbutton">Medium</string>
    <string name="gurubutton">Guru</string>
    <string name="main_menubutton">Main Menu</string>
    <string name="onebut">1</string>
    <string name="twobut">2</string>
    <string name="_4but">4</string>
    <string name="_5but">5</string>
    <string name="_3but">3</string>
    <string name="_6but">6</string>
    <string name="_7but">7</string>
    <string name="_8but">8</string>
    <string name="_9but">9</string>
    <string name="delbut">DEL</string>
    <string name="_0but">0</string>
    <string name="hashbut">#</string>
    <string name="minusbut">-</string>
    <string name="enterbut">Enter</string>
    <string name="guessbut">Guess :</string>
    <string name="preference_file_key" />
</resources>
