<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.braintrainer.GameActivity">


    <!--Main liner layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <!--Inner layout-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="Guess : "
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/randomWindow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="Question"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/userAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=" ?"
                android:textSize="22sp" />



        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="55dp">

            <TextView
                android:id="@+id/Result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/countDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="Counter"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switchHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Hints "
                android:textAlignment="textEnd"
                android:gravity="end" />

        </LinearLayout>





    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="355dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_game"
            android:onClick="numbersClick"
            android:text="@string/onebut"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/two"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="numbersClick"
            android:text="@string/twobut" />

        <Button
            android:id="@+id/four"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:onClick="numbersClick"
            android:text="@string/_4but" />

        <Button
            android:id="@+id/five"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:onClick="numbersClick"
            android:text="@string/_5but" />

        <Button
            android:id="@+id/three"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:onClick="numbersClick"
            android:text="@string/_3but" />

        <Button
            android:id="@+id/six"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:onClick="numbersClick"
            android:text="@string/_6but" />

        <Button
            android:id="@+id/seven"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:onClick="numbersClick"
            android:text="@string/_7but" />

        <Button
            android:id="@+id/eight"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:onClick="numbersClick"
            android:text="@string/_8but" />

        <Button
            android:id="@+id/nine"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:onClick="numbersClick"
            android:text="@string/_9but" />

        <Button
            android:id="@+id/Del"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/delbut" />

        <Button
            android:id="@+id/zero"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:onClick="numbersClick"
            android:text="@string/_0but" />

        <Button
            android:id="@+id/hash"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/hashbut" />

        <Button
            android:id="@+id/Minus"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/minusbut" />


    </GridLayout>


</RelativeLayout>
