<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.braintrainer.NewGameActivity">

    <Button
        android:id="@+id/noviceBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/novicedim"
        android:onClick="difficulty"
        android:text="@string/novicebutton"
        app:layout_constraintBottom_toTopOf="@+id/easyBut"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_round"
        />

    <Button
        android:id="@+id/easyBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/easydim"
        android:onClick="difficulty"
        android:text="@string/easybutton"
        app:layout_constraintBottom_toTopOf="@+id/mediumBut"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_round"/>

    <Button
        android:id="@+id/mediumBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mediumdim"
        android:onClick="difficulty"
        android:text="@string/mediumbutton"
        app:layout_constraintBottom_toTopOf="@+id/guruBut"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_round"/>

    <Button
        android:id="@+id/guruBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gurudim"
        android:onClick="difficulty"
        android:text="@string/gurubutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_round"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="262dp"
        android:layout_height="438dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />
</android.support.constraint.ConstraintLayout>
